# tg_miniapp_bot_scheduler

./: .env  .env.example  .gitignore  AGENTS.MD  README.md  comands.txt  docs.me  package-lock.json  pyproject.toml  telegram-scheduler-cloudflare.cmd  telegram-scheduler-tunnel.cmd
.github/workflows/: deploy.yml
apps/miniapp/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/miniapp/src/: api.ts  app.tsx  main.tsx  styles.css  telegram.ts  types.ts
apps/miniapp/src/hooks/: use-session-state.ts
apps/miniapp/src/lib/: constants.ts  date.ts  formatters.ts  workspace.ts
apps/miniapp/src/pages/: dashboard-home-page.tsx  event-editor-page.tsx  integrations-page.tsx  poll-editor-page.tsx  poll-page.tsx  stats-page.tsx
apps/miniapp/src/styles/: base.css  dashboard.css  forms.css  index.css  layout.css  responsive.css  surfaces.css  tokens.css
apps/server/scheduler_app/: __init__.py  database.py  deps.py  main.py  models.py  schemas.py  security.py  settings.py
apps/server/scheduler_app/api/: __init__.py  router.py
apps/server/telegram_scheduler_miniapp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
idea/: .name
memory-bank/: active-context.md  activeContext.md  architecture-decisions.md  productContext.md  progress.md  project-brief.md  projectbrief.md  stack.md  systemPatterns.md  techContext.md
tests/: conftest.py  test_auth_and_webhook.py  test_events.py  test_events_and_stats.py  test_scheduler_and_polls.py  test_settings.py  test_startup_webhook_sync.py  test_tunnel_helper.py
(+42 files in other folders)
