[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-scheduler-miniapp"
version = "0.1.0"
description = "Single-service Telegram scheduler with Mini App, bot, SQLite, and calendar integrations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiogram>=3.25.0,<4.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "caldav>=2.1.1,<3.0.0",
  "cryptography>=44.0.0,<46.0.0",
  "fastapi>=0.128.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "icalendar>=6.1.0,<7.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "pytest-asyncio>=1.1.0,<2.0.0",
  "pytest-cov>=6.2.0,<7.0.0",
  "respx>=0.22.0,<1.0.0",
]

[project.scripts]
telegram-scheduler = "scheduler_app.main:run"
telegram-scheduler-tunnel = "scheduler_app.dev.tunnel:main"
telegram-scheduler-cloudflare = "scheduler_app.dev.cloudflare:main"

[tool.pytest.ini_options]
pythonpath = ["apps/server"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["apps/server"]
